Fix the infinite loop issue when getting folders/items from a bucket.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(get_bucket_policy)
 export(get_bucketname)
 export(get_cors)
 export(get_encryption)
+export(get_folder)
 export(get_lifecycle)
 export(get_location)
 export(get_notification)
